tests/baselines/reference/unusedLocalsInMethod2.errors.txt
tests/cases/compiler/unusedLocalsInMethod2.ts(4,13): error TS6133: Variable 'x' has never been used.


==== tests/cases/compiler/unusedLocalsInMethod2.ts (1 errors) ====
    
    class greeter {
        public function1() {
            var x, y = 10;
                ~
!!! error TS6133: Variable 'x' has never been used.
            y++;
        }
    }